[FIX] mobile: Large images get squashed due to max-width: 100% rule, is there a better fix than this for it? (might be better if the img selector was limited in some way maybe?)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/12.x@56138 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -34,6 +34,7 @@ body {
 /* Fix for too wide images in jQuery mobile view  */
 img {
 	max-width: 100%;
+	height: auto;
 }
 
 /* lists */
